--- a/vnet-tutorial.csproj
+++ b/vnet-tutorial.csproj
@@ -7,7 +7,8 @@
   <ItemGroup>
   <!--     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="4.1.0" /> -->
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="4.3.0" />
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" />
+  <!--     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.11" /> -->
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
