--- a/vnet-tutorial.csproj
+++ b/vnet-tutorial.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
+    <!--     <TargetFramework>netcoreapp3.1</TargetFramework> -->
+    <TargetFramework>net6.0</TargetFramework>
+    <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>vnet_tutorial</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
